--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.0-rc.5",
+    "ionic-angular": "2.0.1",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
     "particles.js": "^2.0.0",
